[gd_scene load_steps=12 format=2]

[ext_resource path="res://Assets/Sprites/AttackBot2.png" type="Texture" id=1]
[ext_resource path="res://Assets/Sprites/AttackBot4.png" type="Texture" id=2]
[ext_resource path="res://Assets/Sprites/AttackBot1.png" type="Texture" id=3]
[ext_resource path="res://Assets/Sprites/AttackBot6.png" type="Texture" id=4]
[ext_resource path="res://Assets/Sprites/AttackBot3.png" type="Texture" id=5]
[ext_resource path="res://Assets/Sprites/AttackBot5.png" type="Texture" id=6]
[ext_resource path="res://Enemies/AttackDroidTest.gd" type="Script" id=7]
[ext_resource path="res://Levels/TeleporterParticles.tscn" type="PackedScene" id=8]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 4.1423, 8.01891 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 1 ), ExtResource( 5 ), ExtResource( 2 ), ExtResource( 6 ), ExtResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 8.54394, 10.6715 )

[node name="AttackDroid" type="KinematicBody2D"]
collision_layer = 5
collision_mask = 2
script = ExtResource( 7 )
speed = 100
atk = 1
acceleration = 0.6

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 7 )
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )
frame = 2
playing = true

[node name="HitBox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
position = Vector2( 0, 7 )
shape = SubResource( 3 )

[node name="Node2D" type="Node2D" parent="."]

[node name="RayCast2D" type="RayCast2D" parent="Node2D"]
position = Vector2( -6, 0 )
enabled = true
cast_to = Vector2( 0, 17 )

[node name="SpeedTimer" type="Timer" parent="."]

[node name="Position2D" parent="." instance=ExtResource( 8 )]
position = Vector2( 0.046463, 15.4204 )

[node name="MotionTimer" type="Timer" parent="."]
one_shot = true
[connection signal="body_entered" from="HitBox" to="." method="_on_HitBox_body_entered"]
[connection signal="timeout" from="SpeedTimer" to="." method="_on_SpeedTimer_timeout"]
[connection signal="timeout" from="MotionTimer" to="." method="_on_MotionTimer_timeout"]
